# owl_suitesparse

./: Makefile  README.md  dune-project  index.html  owl-suitesparse.install  owl-suitesparse.opam
bindings/: dune  ffi_suitesparse_bindings.ml  ffi_suitesparse_bindings_btf.ml  ffi_suitesparse_bindings_camd.ml  ffi_suitesparse_bindings_cholmod_camd.ml  ffi_suitesparse_bindings_cholmod_check.ml  ffi_suitesparse_bindings_cholmod_cholesky.ml  ffi_suitesparse_bindings_cholmod_core.ml  ffi_suitesparse_bindings_cholmod_gpu.ml  ffi_suitesparse_bindings_cholmod_matrixops.ml  ffi_suitesparse_bindings_cholmod_modify.ml  ffi_suitesparse_bindings_cholmod_partition.ml  ffi_suitesparse_bindings_cholmod_supernodal.ml  ffi_suitesparse_bindings_cholmod_type.ml  ffi_suitesparse_bindings_colamd.ml  ffi_suitesparse_bindings_cs.ml  ffi_suitesparse_bindings_cs_d.ml  ffi_suitesparse_bindings_cs_z.ml  ffi_suitesparse_bindings_klu.ml  ffi_suitesparse_bindings_ldl.ml  ffi_suitesparse_bindings_qr.ml  ffi_suitesparse_bindings_qr.ml.zzz  ffi_suitesparse_bindings_umfpack_amd.ml  ffi_suitesparse_bindings_umfpack_d.ml  ffi_suitesparse_bindings_umfpack_utils.ml  ffi_suitesparse_bindings_umfpack_z.ml  ffi_suitesparse_stubgen.ml
bindings/include/: klu.h
owl-suitesparse/: index.html
owl-suitesparse/Ffi_suitesparse_bindings/: index.html
owl-suitesparse/Ffi_suitesparse_bindings_btf/: index.html
owl-suitesparse/Ffi_suitesparse_bindings_camd/: index.html
owl-suitesparse/Ffi_suitesparse_bindings_ccolamd/: index.html
owl-suitesparse/Ffi_suitesparse_bindings_cholmod_camd/: index.html
owl-suitesparse/Ffi_suitesparse_bindings_cholmod_check/: index.html
owl-suitesparse/Ffi_suitesparse_bindings_cholmod_cholesky/: index.html
owl-suitesparse/Ffi_suitesparse_bindings_cholmod_core/: index.html
owl-suitesparse/Ffi_suitesparse_bindings_cholmod_gpu/: index.html
owl-suitesparse/Ffi_suitesparse_bindings_cholmod_matrixops/: index.html
owl-suitesparse/Ffi_suitesparse_bindings_cholmod_modify/: index.html
owl-suitesparse/Ffi_suitesparse_bindings_cholmod_partition/: index.html
owl-suitesparse/Ffi_suitesparse_bindings_cholmod_supernodal/: index.html
owl-suitesparse/Ffi_suitesparse_bindings_colamd/: index.html
src/: dune  owl_suitesparse.ml  owl_suitesparse_camd.ml  owl_suitesparse_cs.ml  owl_suitesparse_exception.ml  owl_suitesparse_ffi.ml  owl_suitesparse_ldl.ml  owl_suitesparse_umfpack.ml
(+90 files in other folders)
