(library
 (name owl_suitesparse)
 (public_name owl-suitesparse)
 (wrapped false)
 (modes byte)
 (flags
  (:standard -safe-string))
 (libraries ctypes))

(rule
 (targets ffi_suitesparse_generated.ml)
 (deps ../bindings/ffi_suitesparse_stubgen.exe)
 (action
  (with-stdout-to
   %{targets}
   (run %{deps} -ml)
  )
 )
)