(copy_files# ../bindings/include/*)

(library
 (name owl_suitesparse)
 (public_name owl-suitesparse)
 (wrapped false)
 (modes best)
 (flags
  (:standard -safe-string))
 (c_names ffi_suitesparse_generated_stub)
 (libraries ctypes))

(rule
 (targets ffi_suitesparse_generated.ml)
 (deps ../bindings/ffi_suitesparse_stubgen.exe)
 (action
  (with-stdout-to
   %{targets}
   (run %{deps} -ml)
  )
 )
)

(rule
 (targets ffi_suitesparse_generated_stub.c)
 (deps ../bindings/ffi_suitesparse_stubgen.exe)
 (action
  (with-stdout-to
   %{targets}
   (run %{deps} -c)
  )
 )
)