(copy_files# ../bindings/include/*)

(copy_files# ../bindings/ffi_suitesparse_bindings*)

(library
 (name owl_suitesparse)
 (public_name owl-suitesparse)
 (wrapped false)
 (flags
  (:standard -safe-string))
 (c_names ffi_suitesparse_generated_stub)
 (c_flags :standard)
 (c_library_flags :standard -lamd -lcamd -lcxsparse -lumfpack -lspqr -lsuitesparseconfig)
 (libraries ctypes))

(rule
 (targets ffi_suitesparse_generated.ml)
 (deps ../bindings/ffi_suitesparse_stubgen.exe)
 (action
  (with-stdout-to
   %{targets}
   (run %{deps} -ml))))

(rule
 (targets ffi_suitesparse_generated_stub.c)
 (deps ../bindings/ffi_suitesparse_stubgen.exe)
 (action
  (with-stdout-to
   %{targets}
   (run %{deps} -c))))
